# Codexa

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: __init__.py
core/api/: __init__.py
core/config/: __init__.py
core/crypto/: __init__.py
core/db/: __init__.py
core/llm/: __init__.py
core/models/: __init__.py
core/parsers/: __init__.py
desktop/: __init__.py
docs/: README.md  api.md  architecture.md  browser_extension.md  installation.md  ollama_context_window.md  rag_improvements.md  remote_access.md  usage.md
examples/: README.md  data_processor.py  fastapi_guide.md  python_basics.md  web_scraper.py
scripts/: __init__.py  batch_index.py  cli.py  setup.py  validate.py
tests/: conftest.py  test_api.py  test_cli.py  test_crypto.py  test_parsers.py
